added first line of js

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <!--  -->
     <script src="script.js"></script>
     <i class="fab fa-500px"></i>
+    <h1>My Name is Sunil R</h1>
   </body>
 </html>
